--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 /*header*/
 header {
@@ -8,9 +9,16 @@ header {
   background-color: #404041;
   text-align: center;
 }
+
 h1 {
   margin: 0;
+  padding-top:20px;
+  font-weight: 700;
+  color: #ed458b;
 }
 
-
+h1 span {
+  font-weight: 300;
+  color: #e6e7e8;
+}
 /*main*/
