--- a/css/main.css
+++ b/css/main.css
@@ -29,8 +29,7 @@ main {
 
 input {
   display: block;
-  margin: auto;
-  margin-top: 20px;
+  margin: 20px auto;
   width: 90%;
   height: auto;
   font-size: 20px;
@@ -38,9 +37,7 @@ input {
 
 button {
   display: block;
-  margin: auto;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin: 15px auto 15px;
   border: none;
   border-radius: 10px;
   width: 90%;
@@ -64,4 +61,32 @@ button {
 .guessDir {
   color: #404041;
   font-size: 20px;
+}
+
+
+@media screen and (min-width: 450px) {
+    #guessButton, #clearButton {
+        margin: 15px auto 15px;
+        width: 45%;
+        display: inline-block;
+    }
+}
+
+@media screen and (min-width: 700px) {
+    #guessButton, #clearButton {
+        /*margin: 15px auto 15px;
+        width: 45%;*/
+        max-width: 315px;
+        /*display: inline-block;*/
+    }
+
+    #resetButton {
+      /*margin: 15px auto 15px;*/
+      max-width: 630px;
+    }
+
+    input {
+      max-width: 630px;
+    }
+
 }
