--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,10 @@ button:disabled {
   color: #ffffff;
 }
 
+button:hover:enabled {
+  background-color: #eb008b;
+}
+
 .guessTitle {
   color: #404041;
   font-size: 20px;
@@ -69,12 +73,48 @@ button:disabled {
   height: 25px;
 }
 
+/*settings*/
+
+#settingsButton {
+  height: 25px;
+  width: 25px;
+  opacity: .3;
+}
+
+#settingsButton:hover{
+  opacity: 1;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+section h2{
+  color: #e6e7e8;
+}
+
+section input{
+  width: 90%;
+}
+
+section button {
+  width: 90%;
+}
+
 
 @media screen and (min-width: 450px) {
     #guessButton, #clearButton {
         margin: 15px auto 15px;
         width: 45%;
         display: inline-block;
+    }
+    Section input {
+      display: inline-block;
+      width: 60%;
+    }
+    Section button{
+      display: inline-block;
+      width: 30%;
     }
 }
 
@@ -93,6 +133,13 @@ button:disabled {
 
     input {
       max-width: 630px;
+    }
+
+    Section input {
+      max-width: 426px;
+    }
+    Section button{
+      max-width: 210px;
     }
 
 }
