--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,12 @@ input {
   height: auto;
   font-size: 20px;
 }
+
+input:focus {
+    outline-color: #ed458b;
+}
+
+
 button {
   display: block;
   margin: 15px auto 15px;
@@ -45,6 +51,11 @@ button {
   background-color: #929497;
   color: #ffffff;
 }
+
+button:focus {
+  outline:none;
+}
+
 
 button:disabled {
   background-color: #d0d2d3;
@@ -59,6 +70,7 @@ button:hover:enabled {
   color: #404041;
   font-size: 20px;
   height: 25px;
+  margin-top:10px;
 }
 
 .lastGuess {
@@ -70,7 +82,7 @@ button:hover:enabled {
 .guessDir {
   color: #404041;
   font-size: 20px;
-  height: 25px;
+  height: 50px;
 }
 
 /*settings*/
@@ -101,6 +113,11 @@ section button {
   width: 90%;
 }
 
+@media screen and (max-width: 400px){
+  .boom{
+
+  }
+}
 
 @media screen and (min-width: 450px) {
     #guessButton, #clearButton {
