--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,8 @@ button:hover:enabled {
   color: #404041;
   font-size: 20px;
   height: 50px;
+  width: 90%;
+  margin: 0 auto 0;
 }
 
 /*settings*/
